# QMultiPy

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
examples/: xsf_gto_cubes.py
qmultipy/: constants.py  ewald.py  fft.py  field.py  grid.py  ions.py  maps.py  math_utils.py  time_data.py
qmultipy/formats/: __init__.py  ase_io.py  chg.py  cube.py  io.py  npy.py  pmg_io.py  qepp.py  snpy.py  vasp.py  xsf.py  xyz.py
qmultipy/io/: __init__.py  cube.py  den.py  io.py  npy.py  snpy.py  vasp.py  xsf.py
qmultipy/mpi/: __init__.py  mp_mpi4py.py  mp_serial.py  mpi.py  utils.py
test/: test_field.py  test_pme.py
test/io/: test_io_ase.py  test_io_formats.py
test/io/DATA/: water.xyz
test/io/common/: __init__.py
test/mpi/: test_mpi_scatter_gather.py
test/unit/field/: test_field.py
test/unit/grid/: test_grid.py
test/unit/ions/: test_ions.py
