[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmultipy"
version = "0.0.1dev0"
license = { file = "LICENSE" }
description = "Python packages for Density Functional Theory"
maintainers = [
]
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
	'Development Status :: 3 - Alpha',
	'Intended Audience :: Science/Research',
	'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3.9',
	'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11',
	'Programming Language :: Python :: 3.12',
	'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Physics',
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = [
	"numpy>=1.13.0",
	"scipy>=1.6.0",
	"ase>=3.23.0",
]

[project.optional-dependencies]
extra = [
	"pyfftw>=0.14.0",
]
mpi = [
	"mpi4py",
	"mpi4py-fft",
]

[dependency-groups]
docs = [
    "nbsphinx>=0.9.7",
    "pandoc>=2.4",
    "sphinx>=7.4.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-inline-tabs>=2023.4.21",
    "sphinx-panels>=0.4.1",
    "sphinx-rtd-theme>=3.0.2",
]
test = [
    "black==24.2.0",
    "isort==5.13.2",
    "mypy==1.8.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mpi>=0.6",
    "velin==0.0.11",
]

[project.urls]
source = "https://github.com/Quantum-MultiScale/qmultipy"

[tool.pytest.ini_options]
addopts = [
	"--verbose",
	"--strict-markers",
	"--strict-config",
	"-ra"
]
testpaths = "test"
